# mcp3x6x

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yaml  ci.yaml.yml
src/: doctesthelper.rs  lib.rs  regs.rs
