[package]
name = "mcp3x6x"
version = "0.1.0"
edition = "2024"

[dependencies]
modular-bitfield = "0.13.0"
embedded-hal = "1.0.0"
defmt = { version = "1.0.1", optional = true }

[features]
defmt = ["dep:defmt"]
mcp3461 = []
mcp3462 = ["__has_ch2_ch3"]
mcp3464 = ["__has_ch2_ch3", "__has_ch4_ch5_ch6_ch7"]
mcp3561 = []
mcp3562 = ["__has_ch2_ch3"]
mcp3564 = ["__has_ch2_ch3", "__has_ch4_ch5_ch6_ch7"]

# internal features:
__has_ch2_ch3 = []
__has_ch4_ch5_ch6_ch7 = []